wadf-reprocess

New features:
- #203: Add workaround for PEAR bug #13425 (Dep package install fails when 2 
  vers of dep exist, even when depchain is OK)
- #201: Allow wadf-undeploy to take "-d opt=value" options
- #205: Add workaround for PEAR bug #13427 (<max> does not completely exclude 
  dep versions from consideration) when installing deps

Bugs fixed:
- #187: wadf-undeploy does not correctly remove databases
- #207: Reprocess fails if switching to a new tag/branch, and some generated 
  files conflict with newly-added files in version control
- Problem deploying SVN dependencies from dependency-tags file, where the
  directory in SVN has been removed since the tagged SVN revision
- #227: Deploying SVN dependencies using dependency tags sometimes fails due to
  interaction between directories

Changes/improvements:
- #175: Deploying a database without a schema.sql fails even if dbX_schema is 
  empty
- #224: Reprocessing with dependency tags doesn't process the client package
  leading to possible spurious dependency warnings
- #177: Add handling of schema import errors
- #195: Add --no-dep-tags option to wadf-reprocess
- #196: Rewrite template handling to remove dependency on UNIX "find" command
  (for portability)
- #198: Improve general error handling
- #204: Make text output and word wrapping respect console size
- #206: Hide passwords when entered on command line


#######################################################################
# v0.11.2 (11 Feb 2009)
#######################################################################
Remove some debugging output that appears when deploying using a dependency
tags file; it was inadvertently left in. No functional changes.

Bugs fixed:
- #164: Debugging output present when using dependency tags file


#######################################################################
# v0.11.1 (2 Feb 2009)
#######################################################################