@@ -213,6 +213,10 @@ dep_pear_config_file = @dep_pear_deploy_path@/.pearrc
 ; Can include username and password e.g. user:pass@channelname
 dep_pear_base_channel = pear.example.com
 
+; Whether to log out of the base channel after deployment (this clears cached
+; PEAR channel passwords from the deployment)
+dep_pear_base_channel_logout_after_deploy = no
+
 ; REQUIRED
 ; The package (in "channel/name" format) which provides the base "application"
 ; role. Plus any other packages providing custom "base roles" that you wish
